Fix formatting issue with noun info on mobile

--- a/packages/nouns-webapp/src/components/NounInfoRowBirthday/NounInfoRowBirthday.module.css
+++ b/packages/nouns-webapp/src/components/NounInfoRowBirthday/NounInfoRowBirthday.module.css
@@ -1,11 +1,15 @@
 .nounInfoRowBirthday {
     font-family: 'PT Root UI Bold';
+    margin-left: 5px;
 }
 
 .birthdayInfoContainer {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 210px;
+    display: inline;
+    width: 250px;
     height: 25px;
+}
+
+.birthdayIcon {
+    margin-bottom: 4px;
+    margin-right: 7px;
 }
